syntax = "proto3";

package NAlice.NScenarios.NVideoCall;

option java_package = "ru.yandex.kronstadt.alice.scenarios.video_call.proto";
option java_multiple_files = true;

import "mapreduce/yt/interface/protos/extension.proto";

message TVideoCallScenarioData {
  option (NYT.default_field_flags) = SERIALIZATION_YT;

  repeated TFavoriteContact Favorites = 1 [json_name = "favorites", (NYT.column_name) = "favorites"];
}

message TFavoriteContact {
  option (NYT.default_field_flags) = SERIALIZATION_YT;

  string LookupKey = 1 [json_name = "lookup_key", (NYT.column_name) = "lookup_key"];
}
